500 and 422 page added

--- a/public/404.html
+++ b/public/404.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThinkTech | Websites and Apps</title>
-    <link href="/assets/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/font-awesome.min.css" rel="stylesheet">
-
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>404 Page Not Found</title>
+<link href="/assets/bootstrap.min.css" rel="stylesheet">
+<link href="/assets/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-
-    <section class="text-center" style="padding-top: 5em;">
-
-        <h1>404, Page not found</h1>
-        <p>The Page you are looking for doesn't exist or an other error occurred.</p>
-        <a class="btn btn-primary" href="/">GO BACK TO THE HOMEPAGE</a>
-        
-    </section>
-
+<section class="text-center" style="padding-top: 5em;">
+<h1>404, Page not found</h1>
+<p>The Page you are looking for doesn't exist or an other error occurred.</p>
+<a class="btn btn-primary" href="/">GO BACK TO THE HOMEPAGE</a>
+</section>
 </body>
 </html>
